--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-tsrouter-app"
-    />
+    <meta name="theme-color" content="#00baff" />
+    <meta name="description" content="Just a music player." />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - app-ts</title>
+    <title>echo</title>
+    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="mdui/mdui.css" />
   </head>
   <body>
     <div id="app"></div>
