add css reset styles for consistent layout and typography

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>echo</title>
+    <link rel="stylesheet" href="/src/css-reset.css" />
     <link rel="stylesheet" href="/src/styles.css" />
     <link rel="stylesheet" href="mdui/mdui.css" />
   </head>
